# dgeotoolkit

./: .gitignore  NEXT.md  README.md  pyproject.toml
dgeotoolkit/: const.py  helpers.py
dgeotoolkit/dgeoflow/: dgeoflowmodel.py
dgeotoolkit/dstability/: dstabilitymodel.py  parser.py
dgeotoolkit/models/: basemodel.py  dseries_model.py
dgeotoolkit/shared/: dataclasses.py  json_conversions.py
tests/: conftest.py
tests/dgeoflow/: test_degeoflow_model.py
tests/dstability/: test_dstability_model.py  test_parser.py
tests/models/: test_basemodel.py
tests/shared/: test_json_conversions.py
tests/testdata/: loads.json
tests/testdata/dgeoflow/: empty.flox  sample01.flox
tests/testdata/dstability/: empty.stix  sample01.stix  sample02.stix  sample03.stix  sample04.stix
tests/testdata/dstability/unpacked/: checksum  nailpropertiesforsoils.json  projectinfo.json  soils.json  soilvisualizations.json
tests/testdata/dstability/unpacked/calculationsettings/: calculationsettings.json
tests/testdata/dstability/unpacked/decorations/: decorations.json
tests/testdata/dstability/unpacked/geometries/: geometry.json
tests/testdata/dstability/unpacked/loads/: loads.json
tests/testdata/dstability/unpacked/scenarios/: scenario.json
tests/testdata/dstability/unpacked/soillayers/: soillayers.json
tests/testdata/dstability/unpacked/statecorrelations/: statecorrelations.json
tests/testdata/dstability/unpacked/states/: states.json
tests/testdata/dstability/unpacked/waternets/: waternets.json
(+1 files in other folders)
