[tool.poetry]
name = "dgeotoolkit"
version = "0.1.0"
description = ""
authors = ["Rob van Putten <breinbaasnl@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.0.2"
pytest = "^7.4.0"
numpy = "^1.25.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
